### Voltaire's Nightmare Changelog ###

# v 2.2.2 #

-Reworked the following mission trees: Toulouse, Palatinate (thanks to FrenchKnight)
-Small fixes for the following mission trees: Brandenburg, Denmark, Altsachsen, Aragon, Frisia, England, Ifriqiya, Sicily, Athens, France, Berg/Cleves/Julich, Milan, Papal States
-Overhauled the following custom event sets: Baltic Pagan
-Added 2 new estate privileges: 1 for Dutch nations (Dutch Water Lines/Burghers), 1 for steppe tribal nations (Steppe Colonization/Tribes) 
-Added 8 more loading tips
-Added triggered province modifier for the Druze sanctuary of Nabi Shu'ayb
-Baltic Order techs should be definitively fixed now as the previous fix was not properly implemented... please let this be the last time.
-German culture can spread in the Baltics when controlled by German tags
-Fixed rare bug where former Polish subjects would get their rulers and heirs replaced when the Fragmentation of Poland happens
-Fixed longstanding bug where England could not call their subject Normandy into any wars after the Norman conquest
-Many <3 development provinces in Europe now have their development boosted to 3 in the timeline once they are civilised
-Norway replaces Sweden as a suggested country in the 1054 bookmark (it fit better due to its potential role in the English conquest event chain)
-Small rework to part of Aragon's mission tree structure
-Province warscore cost replaces claim duration in Aragon's age ability
-Sicily age ability nerfed
-Changed the province requirements in the decision to create Brandenburg as a non-Markish country
-Slightly rebalanced the Frankish Monarchy interaction effects
-Forming another nation should now always switch your country name to theirs (this was a problem with dynamic names such as Altsachsen)
-Hospices are now more effective at stopping plagues from spawning and spreading in provinces
-Remastered the mission window GFX (thanks to SaGa)