@@ -3936,9 +3936,11 @@
  hns_defeat_the_rus_mission: "Destroyed the Rus"
  desc_hns_defeat_the_rus_mission: ""
  hns_defeat_the_caliphate_mission: "Victory over the Caliphate"
+ desc_hns_defeat_the_caliphate_mission: ""
  hns_conquer_astrakhan_mission: "Rebuilding Capital"
  desc_hns_conquer_astrakhan_mission: ""
- desc_hns_defeat_the_caliphate_mission: ""
+ hns_conquer_volga_bulgaria_mission: "Volga-Bulgarian Protectorate"
+ desc_hns_conquer_volga_bulgaria_mission: ""
  hns_defeat_the_romans_mission: "Humiliated the Romans"
  desc_hns_defeat_the_romans_mission: ""
  hns_conquer_circassia_mission: "Resettling the Steppe"
