@@ -237,7 +237,7 @@ vn_hun_missions_slot_1 = {
             trade_goods = silver
             OR = {
                 NOT = { development = 12 }
-                has_production_building_trigger = no
+                devastation = 1
             }
         }
 		trigger = {
@@ -245,7 +245,7 @@ vn_hun_missions_slot_1 = {
                 value = 3
                 trade_goods = silver
                 development = 12
-                has_production_building_trigger = yes
+                NOT = { devastation = 1 }
             }
 		}
 		effect = {
