@@ -740,7 +740,7 @@ vn_pap_missions_slot_2 = {
         provinces_to_highlight = {
             OR = {
                 province_id = 4974
-                province_id = 4920
+                province_id = 4183
                 province_id = 3053
             }
             NOT = {
@@ -755,7 +755,7 @@ vn_pap_missions_slot_2 = {
                     religion = catholic
                 }
             }
-            4920 = {
+            4183 = {
                 owner = {
                     religion = catholic
                 }
