@@ -389,26 +389,84 @@ vn_ven_missions_slot_2 = {
         }
         effect = {
             add_years_of_income = 0.5
-            random_owned_province = {
+            custom_tooltip = vn_will_receive_rewards_tt
+            if = {
                 limit = {
-                    region = treviso_region
-                    has_trade_building_trigger = no
+                    any_owned_province = {
+                        region = treviso_region
+                        has_trade_building_trigger = no
+                        province_has_center_of_trade_of_level = 1
+                    }
                 }
-                add_building = trade_depot
+                random_owned_province = {
+                    limit = {
+                        region = treviso_region
+                        has_trade_building_trigger = no
+                        province_has_center_of_trade_of_level = 1
+                    }
+                    add_building = trade_depot
+                }
             }
-            random_owned_province = {
-                limit = {
-                    region = lombardy_region
-                    has_trade_building_trigger = no
+            else = {
+                random_owned_province = {
+                    limit = {
+                        region = treviso_region
+                        has_trade_building_trigger = no
+                    }
+                    add_building = trade_depot
                 }
-                add_building = trade_depot
             }
-            random_owned_province = {
+            if = {
                 limit = {
-                    region = romagna_region
-                    has_trade_building_trigger = no
+                    any_owned_province = {
+                        region = lombardy_region
+                        has_trade_building_trigger = no
+                        province_has_center_of_trade_of_level = 1
+                    }
                 }
-                add_building = trade_depot
+                random_owned_province = {
+                    limit = {
+                        region = lombardy_region
+                        has_trade_building_trigger = no
+                        province_has_center_of_trade_of_level = 1
+                    }
+                    add_building = trade_depot
+                }
+            }
+            else = {
+                random_owned_province = {
+                    limit = {
+                        region = lombardy_region
+                        has_trade_building_trigger = no
+                    }
+                    add_building = trade_depot
+                }
+            }
+            if = {
+                limit = {
+                    any_owned_province = {
+                        region = romagna_region
+                        has_trade_building_trigger = no
+                        province_has_center_of_trade_of_level = 1
+                    }
+                }
+                random_owned_province = {
+                    limit = {
+                        region = romagna_region
+                        has_trade_building_trigger = no
+                        province_has_center_of_trade_of_level = 1
+                    }
+                    add_building = trade_depot
+                }
+            }
+            else = {
+                random_owned_province = {
+                    limit = {
+                        region = romagna_region
+                        has_trade_building_trigger = no
+                    }
+                    add_building = trade_depot
+                }
             }
         }
     }
