@@ -2,8 +2,9 @@
 
 # v 2.2.2 #
 
+-Added new mission tree for Khazaria and Huns with with 25 missions (contribution by RetrogMGXII)
 -Reworked the following mission trees: Toulouse, Palatinate (thanks to FrenchKnight)
--Small fixes for the following mission trees: Brandenburg, Denmark, Altsachsen, Aragon, Frisia, England, Ifriqiya, Sicily, Athens, France, Berg/Cleves/Julich, Milan, Papal States
+-Small fixes for the following mission trees: Brandenburg, Denmark, Altsachsen, Aragon, Frisia, England, Ifriqiya, Sicily, Athens, France, Berg/Cleves/Julich, Milan, Papal States, Venice, Hungary
 -Overhauled the following custom event sets: Baltic Pagan
 -Added 2 new estate privileges: 1 for Dutch nations (Dutch Water Lines/Burghers), 1 for steppe tribal nations (Steppe Colonization/Tribes) 
 -Added 8 more loading tips
